Added info on workflows
Updates on github-actions